--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -3,136 +3,6 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.Headline {
-  height: 770px;
-  display: flex;
-  flex-wrap: wrap;
-  align-content: space-around;
-  justify-content: center;
-  flex-direction: column;
-  background-image: linear-gradient(#fcfcfc, #c8eefa);
-}
-
-.sigin-col-1 {
-  min-height: 300px;
-  width: 450px;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 3px 3px 3px 3px rgb(221, 221, 210);
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  flex-wrap: wrap;
-  position: relative;
-}
-
-.h {
-  text-align: center;
-}
-
-.f {
-  font-size: 2em;
-}
-
-.d {
-  display: flex;
-  justify-content: space-around;
-}
-
-input::-moz-placeholder {
-  font-weight: bold;
-  opacity: 0.5;
-  padding: 10px;
-  font-size: 15px;
-}
-
-input::placeholder {
-  font-weight: bold;
-  opacity: 0.5;
-  padding: 10px;
-  font-size: 15px;
-}
-
-.da {
-  border-top: 1px solid rgb(160, 160, 160);
-  width: 90%;
-  padding: 5px 0px 10px 0px;
-}
-
-form {
-  width: 100%;
-}
-
-.txt {
-  width: 100%;
-  height: 40px;
-  border-radius: 5px;
-  border: 1px solid rgb(148, 147, 147);
-}
-
-.name-sig {
-  width: 30%;
-}
-
-.name-check {
-  width: 90%;
-}
-
-label {
-  font-size: 17px;
-  font-weight: 900;
-  line-height: 2.5;
-}
-
-.tap-input-1 {
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-.tab {
-  overflow: hidden;
-  border: 1px solid #ffffff;
-  padding: 20px 0px 15px 0px;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-  padding: 10px 20px 5px 8px;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: 0.3s;
-  font-size: 20px;
-  background-color: #ffffff;
-}
-
-.tab button:hover {
-  color: blue;
-  border-bottom: 2px solid blue;
-}
-
-.tab button.active {
-  color: blue;
-  border-bottom: 3px solid blue;
-}
-
-.tabcontent {
-  display: none;
-  border-top: none;
-}
-
-.from-col-submit {
-  display: flex;
-  padding: 30px 5px 5px 0px;
-  justify-content: center;
-}
-
-body {
-  margin: 0 auto;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
 header {
   width: 100%;
   height: 60px;
@@ -861,4 +731,20 @@ input[type=file i] {
   width: 30%;
   height: 40px;
   background-color: rgb(88, 88, 255);
+}
+
+.btn1 {
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-block;
+  border: 0;
+  border-radius: 10px;
+  height: 28px;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+}
+
+li {
+  text-align: center;
+  padding: 10px 6px 7px 8px;
 }
