--- a/resources/scss/components/_btn.scss
+++ b/resources/scss/components/_btn.scss
@@ -3,17 +3,28 @@
     cursor: pointer;
     display: inline-block;
     border: 0;
-    border-radius:10px;
-height: 28px;
-background-color: rgb(255, 255, 255);
-text-align: center;
+    display: inline-block;
+    border-radius: $base-border-radius;
+width: 12%;
+height: 40px;
+background-color: rgb(88, 88, 255);
+}
+
+@mixin btn2(){
+    text-decoration:none;
+    cursor: pointer;
+    display: inline-block;
+    border: 0;
+    display: inline-block;
+    border-radius: 3px;
+width: 35%;
+height: 30px;
+background-color: rgb(88, 88, 255);
 }
 
 .btn1{
     @include btn1;
 }
-
-li{
-    text-align: center;
-    padding: 10px 6px 7px 8px;
+.btn2{
+    @include btn2;
 }
