--- a/resources/scss/components/_button.scss
+++ b/resources/scss/components/_button.scss
@@ -4,7 +4,7 @@
     display: inline-block;
     border: 0;
     border-radius: $base-border-radius;
-width: $w-30-width;
+width: 12%;
 height: 40px;
 background-color: rgb(88, 88, 255);
 
