--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   margin: 0 auto;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -43,8 +44,7 @@ header {
   cursor: pointer;
   transition: 0.3s;
   font-size: 15px;
-  background-color: rgb(0, 34, 255);
-  width: 20%;
+  width: 35%;
   border-radius: 5px;
   height: 35px;
 }
@@ -61,12 +61,11 @@ header {
 }
 
 .tab button:hover {
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
 
 .tab button.active {
-  color: rgb(255, 255, 255);
-  background-color: rgb(181, 181, 181);
+  color: rgb(68, 0, 255);
   opacity: 1;
 }
 
@@ -93,14 +92,31 @@ article {
   box-shadow: 3px 3px 3px 3px rgb(222, 217, 217);
 }
 
+.an {
+  width: 60%;
+  background-color: aqua;
+}
+
+.khung {
+  width: 40%;
+  background-color: rgb(255, 255, 255);
+  margin: auto;
+  border-radius: 10px;
+  position: absolute;
+  transition-delay: 0.6ms;
+}
+
+/* Định nghĩa hiệu ứng nổi lên */
 .text-1 {
   font-weight: 900;
 }
 
 .main-left {
   float: left;
-  width: 75%;
-  min-height: 100px;
+  width: 71%;
+  padding: 10px;
+  max-height: -moz-min-content;
+  max-height: min-content;
   background-color: rgb(255, 255, 255);
   margin-top: 20px;
   border-radius: 10px;
@@ -109,8 +125,8 @@ article {
 
 .main-right {
   float: right;
-  width: 23%;
-  min-height: 500px;
+  width: 25%;
+  min-height: 240px;
   background-color: rgb(255, 255, 255);
   margin-top: 20px;
   border-radius: 10px;
@@ -131,12 +147,16 @@ label {
 }
 
 .txt {
-  width: 100%;
+  width: 93%;
   height: 30px;
   border-radius: 5px;
   border: 1px solid rgb(210, 210, 210);
   padding: 5px 10px 0px 10px;
   margin-top: 1.5%;
+}
+
+.from-txt1 {
+  padding: 5px 0px 6px 6px;
 }
 
 .txt-img {
@@ -149,7 +169,6 @@ label {
   justify-items: center;
   align-content: center;
   float: left;
-  margin-left: 30px;
 }
 
 .txt-link {
@@ -161,21 +180,17 @@ label {
   display: grid;
   justify-items: center;
   align-content: center;
-  margin-left: 30px;
 }
 
 .text-file {
-  float: none;
-  margin-left: 10%;
+  padding: 4px 0px 7px 1px;
 }
 
 .txt-text1 {
   width: 50%;
-  height: 110px;
+  min-height: 100px;
   display: grid;
   align-content: center;
-  float: right;
-  margin-right: 5%;
 }
 
 .txt-text {
@@ -195,7 +210,6 @@ label {
   border: 1px solid rgb(210, 210, 210);
   padding: 5px 5px 0px 10px;
   margin-top: 1.5%;
-  margin-left: 10%;
 }
 
 input[type=file i] {
@@ -761,4 +775,18 @@ footer {
   width: 35%;
   height: 30px;
   background-color: rgb(88, 88, 255);
+}
+
+.btn3 {
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-block;
+  border: 1px dashed blue;
+  display: inline-block;
+  border-radius: 3px;
+  width: 30%;
+  height: 40px;
+  color: blue;
+  background-color: rgb(255, 255, 255);
+  font-size: 12px;
 }
