--- a/resources/scss/layout/_layout.scss
+++ b/resources/scss/layout/_layout.scss
@@ -44,8 +44,7 @@ header{
     cursor: pointer;
     transition: 0.3s;
     font-size: 15px;
-    background-color: rgb(0, 34, 255);
-    width: 20%;
+    width: 35%;
     border-radius: 5px;
     height: 35px;
   }
@@ -62,12 +61,12 @@ header{
   }
 
   .tab button:hover {
-   color: rgb(255, 255, 255);
+   color: rgb(0, 0, 0);
 
   }
   .tab button.active {
-    color: rgb(255, 255, 255);
-  background-color: rgb(181, 181, 181);
+    color: rgb(68, 0, 255);
+
   opacity:1;
  
   }
@@ -94,13 +93,31 @@ article{
     border-radius: 10px;
     box-shadow: 3px 3px 3px 3px rgb(222, 217, 217);
  }
+
+
+.an{
+  width: 60%;
+  background-color: aqua;
+}
+
+.khung{
+  width: 40%;
+  background-color: rgb(255, 255, 255);
+  margin: auto;
+  border-radius: 10px;
+  position: absolute;
+transition-delay: 0.6ms;
+}
+
+/* Định nghĩa hiệu ứng nổi lên */
  .text-1{
   font-weight: 900;
  }
 .main-left{
   float: left;
-  width: 75%;
-  min-height: 100px;
+  width: 71%;
+  padding: 10px;
+max-height: min-content;
   background-color: rgb(255, 255, 255);
  margin-top: 20px;
   border-radius: 10px;
@@ -108,8 +125,8 @@ article{
 }
 .main-right{
   float: right;
-  width: 23%;
-  min-height: 500px;
+  width: 25%;
+  min-height: 240px;
   background-color: rgb(255, 255, 255);
  margin-top: 20px;
   border-radius: 10px;
@@ -132,7 +149,7 @@ label{
 }
 
 .txt{
-  width: 100%;
+  width: 93%;
   height: 30px;
   border-radius: 5px;
   border: 1px solid rgb(210, 210, 210);
@@ -141,6 +158,9 @@ label{
   
 }
 
+.from-txt1{
+  padding: 5px 0px 6px 6px;
+}
 
 .txt-img{
   width: 30%;
@@ -152,7 +172,7 @@ display: grid;
 justify-items: center;
 align-content: center;
 float: left;
-margin-left: 30px;
+
 
 }
 
@@ -166,23 +186,19 @@ display: grid;
 justify-items: center;
 align-content: center;
 
-margin-left: 30px;
+
 
 }
 .text-file{
-  float: none;
-  margin-left: 10%;
-  
+  padding: 4px 0px 7px 1px;
 }
 
 .txt-text1{
   width: 50%;
-  height: 110px;
+  min-height: 100px;
 display: grid;
-
 align-content: center;
-float: right;
-margin-right: 5%;
+
 }
 .txt-text{
   font-size: 10px;
@@ -199,7 +215,7 @@ margin-right: 5%;
   border: 1px solid rgb(210, 210, 210);
   padding: 5px 5px 0px 10px;
   margin-top: 1.5%;
-  margin-left: 10%;
+
   
 }
 input[type="file" i]{
