Upload 70% of code 1pm

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -44,7 +44,7 @@ header {
   cursor: pointer;
   transition: 0.3s;
   font-size: 15px;
-  width: 35%;
+  width: 16%;
   border-radius: 5px;
   height: 35px;
 }
@@ -313,13 +313,33 @@ input[type=file i] {
   display: none;
 }
 
+.filter-form {
+  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+#filter-button:active + .filter-form {
+  display: block;
+  opacity: 1;
+}
+
 footer {
-  width: 80%;
+  width: 40%;
   margin: auto;
   display: flex;
-  height: 111px;
-  justify-content: center;
-  flex-direction: row-reverse;
+  height: 85px;
+  align-items: flex-end;
+  justify-content: flex-end;
+  padding-bottom: 50px;
+}
+
+.xoa {
+  position: absolute;
+  position: absolute;
+  margin-top: 1%;
+  margin-left: -1.5%;
+  border: none;
 }
 
 .text-Yello {
@@ -748,7 +768,7 @@ footer {
   display: inline-block;
   border: 0;
   border-radius: 20px;
-  width: 12%;
+  width: 25%;
   height: 40px;
   background-color: rgb(88, 88, 255);
 }
