--- a/resources/scss/layout/_layout.scss
+++ b/resources/scss/layout/_layout.scss
@@ -44,7 +44,7 @@ header{
     cursor: pointer;
     transition: 0.3s;
     font-size: 15px;
-    width: 35%;
+    width: 16%; 
     border-radius: 5px;
     height: 35px;
   }
@@ -315,16 +315,33 @@ input[type="file" i]{
 .hidden {
   display: none;
 }
+.filter-form {
+  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+ 
+}
 
+#filter-button:active + .filter-form {
+  display: block;
+  opacity: 1;
+}
 footer{
-  width: 80%;
+  width: 40%;
   margin: auto;
   display: flex;
-  height: 111px;
-  justify-content: center;
-  flex-direction: row-reverse;
+  height: 85px;
+  align-items: flex-end;
+  justify-content: flex-end;
+  padding-bottom: 50px;
 }
 
 
-
+.xoa{
+  position: absolute;
+  position: absolute;
+  margin-top: 1%;
+  margin-left: -1.5%;
+  border: none;
+}
 
