--- a/resources/scss/layout/_layout.scss
+++ b/resources/scss/layout/_layout.scss
@@ -1,16 +1,18 @@
 body{
     margin: 0 auto;
     font-family: $f-font-family;
+    background-color: rgb(245, 245, 245);
 }
 
 header{
     width: 100%;
-    height: 60px;
-    background-color: blue;
+    height: 52px;
+    background: rgba(47, 84, 235, 1);
+
 
 }
 .left{
-    width: 90%;
+    width: 91%;
     float: left;
 }
 
@@ -19,6 +21,7 @@ header{
     float: right;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .step{
   width: 20%;
@@ -31,11 +34,13 @@ header{
   }
   
   .menu{
-    height: 80px;
+    height: 52px;
     display: flex;
     align-items: center;
-    align-items: baseline;
     flex-wrap: nowrap;
+    flex-direction: row;
+    align-content: stretch;
+    justify-content: space-evenly;
 }
   
   .tab button {
@@ -43,10 +48,13 @@ header{
     outline: none;
     cursor: pointer;
     transition: 0.3s;
-    font-size: 15px;
-    width: 16%; 
-    border-radius: 5px;
-    height: 35px;
+    font-size: 12px;
+    width: 24%; 
+    border-radius: 3%;
+    height: 33px;
+background: none  ;
+    
+    
   }
 
   .tab1 button {
@@ -54,22 +62,21 @@ header{
     outline: none;
     cursor: pointer;
     transition: 0.3s;
-    font-size: 12px;
+    font-size: 15px;
     width: 10%;
-    border-radius: 5px;
+
     height: 40px;
+  background:none;
   }
 
-  .tab button:hover {
-   color: rgb(0, 0, 0);
+  .tab1 button:hover {
+   color: rgb(0, 8, 255);
 
   }
-  .tab button.active {
-    color: rgb(68, 0, 255);
-
-  opacity:1;
- 
-  }
+  .tab1 button.active {
+    color: blue;
+    border-bottom: 3px solid blue;
+}
   .tabcontent {
     display: none;
     border-top: none;
@@ -77,9 +84,6 @@ header{
 
 article{
     width: 98%;
-  
-    
-   
     margin: auto;
     border-radius: 10px;
    
@@ -88,8 +92,8 @@ article{
   line-height: 1.5;
   font-size: 20px;
     padding: 5px 10px 10px 20px;
-    height: 100px;
-    background-color: rgb(245, 245, 245);
+    height: 142px;
+    background-color: rgb(255, 255, 255);
     margin: auto;
     border-radius: 10px;
     box-shadow: 3px 3px 3px 3px rgb(222, 217, 217);
@@ -117,20 +121,42 @@ transition-delay: 0.6ms;
 .main-left{
   float: left;
   width: 71%;
-  padding: 10px;
-max-height: min-content;
+  padding: 19px;
+  height: auto; 
   background-color: rgb(255, 255, 255);
  margin-top: 20px;
-  border-radius: 10px;
+
+  box-shadow: 1px 1px 1px 1px rgb(222, 217, 217);
+}
+.text-2{
+  padding: 10px;
+  font-size: smaller;
+}
+
+.text-3{
+  padding: 10px;
+  font-size: 22px;
+}
+
+
+.main-left-cv{
+  float: left;
+  width: 71%;
+  padding: 10px;
+  height: 1450px; 
+  background-color: rgb(255, 255, 255);
+ margin-top: 20px;
+
   box-shadow: 3px 3px 3px 3px rgb(222, 217, 217);
 }
 .main-right{
   float: right;
   width: 25%;
-  min-height: 240px;
+  height: auto;
+
   background-color: rgb(255, 255, 255);
  margin-top: 20px;
-  border-radius: 10px;
+ 
   box-shadow: 3px 3px 3px 3px rgb(222, 217, 217);
 }
 
@@ -151,7 +177,7 @@ label{
 
 .txt{
   width: 93%;
-  height: 30px;
+  height: 38px;
   border-radius: 5px;
   border: 1px solid rgb(210, 210, 210);
   padding: 5px 10px 0px 10px;
@@ -163,6 +189,10 @@ label{
   padding: 5px 0px 6px 6px;
 }
 
+
+.from{
+  height: 160px;
+}
 .txt-img{
   width: 30%;
   height: 100px;
@@ -173,8 +203,7 @@ display: grid;
 justify-items: center;
 align-content: center;
 float: left;
-
-
+margin-left: 23px;
 }
 
 .txt-link{
@@ -186,19 +215,25 @@ background-color: rgb(212, 212, 212);
 display: grid;
 justify-items: center;
 align-content: center;
-
-
+margin-left: 23px;
 
 }
 .text-file{
-  padding: 4px 0px 7px 1px;
+  padding: 0px 0px 15px 25px;
 }
 
+.from-txt1{
+  padding: 5px 25px;
+  
+}
 .txt-text1{
   width: 50%;
   min-height: 100px;
-display: grid;
-align-content: center;
+  display: grid;
+  align-content: center;
+  float: right;
+  margin-right: 10%;
+  margin-top: 5px;
 
 }
 .txt-text{
@@ -211,13 +246,23 @@ align-content: center;
 }
 .txt1{
   width: 80%;
-  height: 30px;
+  height:40px;
   border-radius: 5px;
   border: 1px solid rgb(210, 210, 210);
-  padding: 5px 5px 0px 10px;
+  padding: 3px 11px 0px 39px;
   margin-top: 1.5%;
 
   
+}
+
+
+.txt3{
+  width:80%;
+  height: 35px;
+}
+.txt4{
+  width:94%;
+  height: 42px;
 }
 input[type="file" i]{
   opacity: 0;
@@ -264,16 +309,15 @@ input[type="file" i]{
   display: block;
   opacity: 1;
 }
-footer{
-  width: 40%;
-  margin: auto;
+footer {
+  width: 100%;
+ 
   display: flex;
-  height: 85px;
+  height: 76px;
   align-items: flex-end;
   justify-content: flex-end;
-  padding-bottom: 50px;
+  padding-bottom: 42px;
 }
-
 
 .xoa{
   position: absolute;
@@ -284,8 +328,62 @@ footer{
 }
 
 a{
+  font-family: "Times New Roman", Times, serif;
+  color: white;
+  font-weight: 900;
+  background: content-box;
+  font-size: 17px;
+  list-style: none;
   text-decoration: none;
-  font-size: 16px;
-  font-weight: 800;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+.logo{
+  position: absolute;
+    font-size: 17px;
+    margin-top: 2%;
+    margin-left: -4%;
+}
+.from-txt1 {
+  padding: 10px 3px 10px 26px;
+}
+
+#keywords{
+  margin-top: 10px;
+  font-size: small;
+  background: white;
+}
+
+#keywords button{
+border: 1px solid #6d6d6d;
+  background: white;
+}
+
+.go{
+ position: absolute;
+ font-size: 20px;
+    padding: 14px 8px;
+}
+
+.tagify__input {
+  flex-grow: 1;
+  display: inline-block;
+  min-width: 115px;
+  margin: 0px;
+  padding: var(--tag-pad);
+  line-height: normal;
+  position: relative;
+  white-space: pre-wrap;
+  color: var(--input-color);
+  box-sizing: inherit;
+}
+.img img{
+  width: 98px;
+  color: antiquewhite;
+}
+
+.img{
+  width: 200px;
+  /* margin: auto; */
+  padding-left: 45px; 
 }
