--- a/resources/scss/components/_btn.scss
+++ b/resources/scss/components/_btn.scss
@@ -67,6 +67,41 @@ height: 40px;
  font-size: 12px;
 }
 
+
+@mixin btnxoa(){
+    text-decoration:none;
+    cursor: pointer;
+    display: inline-block;
+ border: 1px solid rgb(255, 0, 0);
+    display: inline-block;
+    border-radius: 3px;
+width: 81%;
+height: 32px;
+ color: rgb(255, 0, 0);
+ background-color: rgb(255, 255, 255);
+ font-size: 12px;
+}
+
+
+@mixin btnthem(){
+    text-decoration:none;
+    cursor: pointer;
+  
+ border: 1px solid rgb(93, 0, 255);
+    border-radius: 3px;
+width: 88%;
+height: 32px;
+ color: rgb(255, 255, 255);
+ background-color: rgb(52, 9, 224);
+ font-size: 12px;
+}
+
+@mixin btnk(){
+    border: none;
+    background: none;
+    font-size: 20px;
+}
+
 .btn1{
     @include btn1;
 }
@@ -81,4 +116,14 @@ height: 40px;
 }
 .btn5{
     @include btn5;
+}
+.btnxoa{
+    @include btnxoa;
+}
+
+.btnthem{
+    @include btnthem;
+}
+.btnk{
+    @include btnk;
 }
