--- a/resources/scss/layout/_layout.scss
+++ b/resources/scss/layout/_layout.scss
@@ -1,7 +1,8 @@
 body{
     margin: 0 auto;
     font-family: $f-font-family;
-    background-color: rgb(245, 245, 245);
+    background: rgba(245, 245, 245, 1);
+
 }
 
 header{
@@ -177,7 +178,7 @@ label{
 
 .txt{
   width: 93%;
-  height: 38px;
+  height: 40px;
   border-radius: 5px;
   border: 1px solid rgb(210, 210, 210);
   padding: 5px 10px 0px 10px;
@@ -189,10 +190,6 @@ label{
   padding: 5px 0px 6px 6px;
 }
 
-
-.from{
-  height: 160px;
-}
 .txt-img{
   width: 30%;
   height: 100px;
@@ -311,12 +308,10 @@ input[type="file" i]{
 }
 footer {
   width: 100%;
- 
   display: flex;
-  height: 76px;
   align-items: flex-end;
   justify-content: flex-end;
-  padding-bottom: 42px;
+  padding-bottom: 20px;
 }
 
 .xoa{
@@ -386,4 +381,19 @@ border: 1px solid #6d6d6d;
   width: 200px;
   /* margin: auto; */
   padding-left: 45px; 
+}
+.col-xoa{
+  width: 100%; 
+  height: 60px;
+  background: rgba(255, 255, 255, 1);
+  display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.col-3{
+  width: 12%;
+}
+
+.col-4{
+  width: 5%;
 }
