--- a/resources/scss/layout/_list.scss
+++ b/resources/scss/layout/_list.scss
@@ -3,17 +3,7 @@ body{
     font-family: $f-font-family;
 }
 
-header{
-    width: 100%;
-    height: 60px;
-    background-color: blue;
 
-}
-.left{
-    width: 90%;
-    float: left;
-    height: 60px;
-}
 .filter-form {
   display: none;
   /* Thêm các thuộc tính CSS khác để tùy chỉnh giao diện của biểu mẫu */
@@ -22,14 +12,27 @@ header{
 #filter-button:active + .filter-form {
   display: block;
 }
+header{
+  width: 100%;
+  height: 52px;
+  background: rgba(47, 84, 235, 1);
+
+
+}
+.left{
+  width: 91%;
+  float: left;
+}
+
 .right{
-    width: 50%;
-    float: right;
-    display: flex;
-    justify-content: center;
+  width: 50%;
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .step{
-  width: 20%;
+width: 20%;
 
 }
 
@@ -39,11 +42,13 @@ header{
   }
   
   .menu{
-    height: 80px;
+    height: 52px;
     display: flex;
     align-items: center;
-    align-items: baseline;
     flex-wrap: nowrap;
+    flex-direction: row;
+    align-content: stretch;
+    justify-content: space-evenly;
 }
   
   .tab button {
@@ -51,11 +56,13 @@ header{
     outline: none;
     cursor: pointer;
     transition: 0.3s;
-    font-size: 15px;
-    background-color: rgb(0, 34, 255);
-    width: 20%;
-    border-radius: 5px;
-    height: 35px;
+    font-size: 12px;
+    width: 24%; 
+    border-radius: 3%;
+    height: 33px;
+background: none  ;
+    
+    
   }
 
   .tab1 button {
@@ -63,29 +70,28 @@ header{
     outline: none;
     cursor: pointer;
     transition: 0.3s;
-    font-size: 12px;
+    font-size: 15px;
     width: 10%;
-    border-radius: 5px;
+
     height: 40px;
+  background:none;
   }
 
-  .tab button:hover {
-   color: rgb(0, 36, 240);
+  .tab1 button:hover {
+   color: rgb(0, 8, 255);
 
   }
-  .tab button.active {
-    color: rgb(255, 255, 255);
-  background-color: rgb(181, 181, 181);
-  opacity:1;
- 
-  }
+  .tab1 button.active {
+    color: blue;
+    border-bottom: 3px solid blue;
+}
   .tabcontent {
     display: none;
     border-top: none;
   }
 
-article{
-    width: 90%;
+article{  
+  width: Fixed (1,391px);
     min-height: 1300px;
     margin: auto;
     border-radius: 10px;
@@ -94,14 +100,20 @@ article{
 
  .col-2{
   line-height: 1.5;
+
+  background-color: rgba(255, 255, 255, 1);
    min-height:370px;
     margin: auto;
-    border-radius: 10px;
-    box-shadow: 3px 3px 3px 3px rgb(233, 233, 233);
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px 1px rgb(233, 233, 233);
+   margin-top: 20px;
+    
  }
  .text-1{
   font-weight: 400;
-  padding: 20px 0px 0px 33px ;
+  padding: 0px 0px 0px 33px ;
+
+
  }
 .main-left{
   float: left;
@@ -139,7 +151,7 @@ label{
 
 .txt{
   width: 100%;
-  height: 30px;
+  height: 40px;
   border-radius: 5px;
   border: 1px solid rgb(210, 210, 210);
   padding: 5px 10px 0px 10px;
@@ -219,17 +231,26 @@ footer{
   flex-direction: row-reverse;
 }
 .search{
-    padding: 0px 0px 0px 33px;
+    padding: 20px 0px 0px 33px;
+    width: 850px;
+    float: left;
 }
-.text-clo-1{
+
+.text-col-2{
+  padding: 20px 0px 0px 33px;
+  width: 471px;
+  float: right;
+}
+
+.text-col-1{
   float: left;
   width: 65%;
-  height: 60px;
+  height: 64px;
 }
 .text-clo-2{
   float: right;
   width: 35%;
-  height: 60px;
+  height: 64px;
 }
 .vitri{
     padding: 15px;
@@ -270,6 +291,8 @@ form.example::after {
     width: 100%;
     border-collapse: collapse;
     padding: 33px;
+    margin-top: 30px;
+    
 }
   
 
@@ -284,13 +307,25 @@ tbody{
 
 th{
   padding: 7px;
+  font-weight: bolder;
+  width: Fill (210.75px)px;
+  height: Fill (40px)px;
+  gap: 0px;
+  border: 1px 0px 0px 1px;
+  opacity: 0px;
+  
+}
+#cars{
+  height: 35px;
+  width: 115px;
 }
 
 td{
   padding: 7px;
-  font-size: 17px;
+  font-size: 15px;
   font-family: 'Times New Roman', Times, serif;
-  font-weight: 500;
+  font-weight: 600;
+  
 }
 
 .filter-form{
