--- a/public/css/list.css
+++ b/public/css/list.css
@@ -79,6 +79,43 @@ header {
   border-top: none;
 }
 
+.tab button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 12px;
+  width: 24%;
+  border-radius: 3%;
+  height: 33px;
+  background: none;
+}
+
+.tab button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 15px;
+  width: 20%;
+  height: 40px;
+}
+
+.tab button:hover {
+  color: rgb(0, 8, 255);
+}
+
+.tab button.active {
+  color: blue;
+  border-bottom: 3px solid blue;
+  background-color: black;
+}
+
+.tabcontent {
+  display: none;
+  border-top: none;
+}
+
 article {
   width: 98%;
   margin: auto;
@@ -161,19 +198,39 @@ article {
   border-radius: 10px;
 }
 
+.from1 {
+  padding: 1px 5px 0px 22px;
+}
+
+#keywords {
+  padding: 0px 2px 10px;
+}
+
 label {
   font-size: 15px;
-  padding: 5px;
+  padding: 2px;
   font-weight: 900;
 }
 
 .txt {
-  width: 93%;
+  width: 94%;
   height: 40px;
   border-radius: 5px;
   border: 1px solid rgb(210, 210, 210);
-  padding: 5px 10px 0px 10px;
+  padding: 5px 10px 0px 20px;
   margin-top: 1.5%;
+}
+
+.usd {
+  position: absolute;
+  margin-top: 1.7%;
+  margin-left: -1%;
+  font-weight: 100;
+}
+
+.txt-keyword {
+  width: 96%;
+  border-radius: 5px;
 }
 
 .from-txt1 {
@@ -951,6 +1008,8 @@ a {
   border: none;
   background: none;
   font-size: 20px;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 body {
@@ -958,13 +1017,50 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.filter-form {
-  display: none;
-  /* Thêm các thuộc tính CSS khác để tùy chỉnh giao diện của biểu mẫu */
+.filter-form1 {
+  width: 100%;
+  background-color: #000000;
+  height: 1392px;
+  position: absolute;
+  margin-top: -26%;
 }
 
-#filter-button:active + .filter-form {
+.khung-1 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  height: 45px;
+}
+
+.loc {
+  width: 70%;
+  margin: auto;
+  background-color: #ffffff;
+  height: 800px;
+  margin-top: 50px;
+}
+
+.filter-form1 {
+  display: none;
+}
+
+#filter-button:active + .filter-form1 {
   display: block;
+}
+
+.filter-col-2 {
+  width: 50%;
+  height: 520px;
+  margin: auto;
+}
+
+.filter-1 {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #2196F3;
+  background-color: aqua;
+  padding: 10px 2px;
+  border-radius: 3px;
 }
 
 header {
@@ -1027,6 +1123,31 @@ header {
   background: none;
 }
 
+.tab2 button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 15px;
+  width: 15%;
+  height: 40px;
+  background: none;
+}
+
+.tab2 button:hover {
+  color: rgb(0, 8, 255);
+}
+
+.tab2 button.active {
+  color: blue;
+  border-bottom: 3px solid blue;
+}
+
+.boder {
+  width: 100%;
+  border-bottom: 1px solid #cccccc;
+}
+
 .tab1 button:hover {
   color: rgb(0, 8, 255);
 }
@@ -1043,7 +1164,7 @@ header {
 
 article {
   width: Fixed 1, 391px;
-  min-height: 1300px;
+  min-height: auto;
   margin: auto;
   border-radius: 10px;
 }
@@ -1051,7 +1172,7 @@ article {
 .col-2 {
   line-height: 1.5;
   background-color: rgb(255, 255, 255);
-  min-height: 370px;
+  min-height: auto;
   margin: auto;
   border-radius: 3px;
   box-shadow: 1px 1px 1px 1px rgb(233, 233, 233);
@@ -1239,28 +1360,44 @@ form.example::after {
 .table {
   width: 100%;
   border-collapse: collapse;
-  padding: 33px;
-  margin-top: 30px;
+  background-color: #ffffff;
+  padding-top: 15px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 1px 1px rgb(233, 233, 233);
+  padding: 30px;
+}
+
+.table1 {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #ffffff;
+  padding-top: 15px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 1px 1px rgb(233, 233, 233);
 }
 
 thead {
-  background-color: aquamarine;
-  height: 40px;
-  text-align: left;
-}
-
-tbody {
-  height: 40px;
-}
-
-th {
-  padding: 7px;
-  font-weight: bolder;
-  width: Fill 210.75px px;
-  height: Fill 40px px;
+  background: rgb(240, 245, 255);
+  width: 180.5px;
+  height: 36px;
   gap: 0px;
   border: 1px 0px 0px 1px;
   opacity: 0px;
+}
+
+tbody {
+  width: 180.5px;
+  height: 36px;
+  gap: 0px;
+  border: 1px 0px 0px 1px;
+  opacity: 0px;
+}
+
+th {
+  width: 180.5px;
+  height: 36px;
+  text-align: justify;
+  padding: 10px;
 }
 
 #cars {
@@ -1269,21 +1406,15 @@ th {
 }
 
 td {
-  padding: 7px;
-  font-size: 15px;
-  font-family: "Times New Roman", Times, serif;
-  font-weight: 600;
+  width: 180.5px;
+  height: 36px;
+  padding: 10px;
 }
 
-.filter-form {
-  width: 47%;
-  justify-content: center;
-  flex-direction: row-reverse;
-  background-color: #a7c3da;
-  height: 450px;
-  position: absolute;
-  z-index: 99999;
-  margin-left: 25%;
-  box-shadow: 3px 3px 3px 3px #f1f1f1;
-  margin-top: -15%;
+.td {
+  background: rgb(255, 255, 255);
+  width: 65%;
+  border: 1px solid rgb(82, 196, 26);
+  color: rgb(82, 196, 26);
+  text-align: center;
 }
