--- a/resources/scss/components/_btn.scss
+++ b/resources/scss/components/_btn.scss
@@ -100,6 +100,9 @@ height: 32px;
     border: none;
     background: none;
     font-size: 20px;
+    text-decoration:none;
+    cursor: pointer;
+  
 }
 
 .btn1{
